--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
         <p id="or"></p>
         <script>
             try{
-              var a=20;
-              var b=0;
-              document.getElementsByClassName("or").innerHTML=a/b;
+              addalert("welcome guest");
             }
             catch(err){
                 document.getElementById("or").innerHTML=err.message;
